Changed Project Name and added more features
- Changed the Project name from MainMoving to MediaOrganizer
- Moved App Data json to "AppData\Roaming" folder  inside the folder
MediaOrganizer
- Added App Data json import and export options
- Enhanced TableView focus scrolling when using keyboard navigation
- Added more error pop-up messages